@@ -248,7 +248,6 @@ class PHPWS_Group {
 
     function getTplTags()
     {
-        translate('users');
         $this->loadMembers();
         $id = $this->id;
 
@@ -289,7 +288,6 @@ class PHPWS_Group {
             $template['MEMBERS'] = 0;
         }
 
-        translate();
         return $template;
     }
 
